fix extra margin for nav in firefox

--- a/source/scss/_partial/header.scss
+++ b/source/scss/_partial/header.scss
@@ -8,6 +8,7 @@ header {
         height: 100%;
         flex-direction: row;
         box-sizing: border-box;
+        margin: 0;
         li {
             display: inline-block;
             a {
